--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@nivo/api": "^0.59.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-html5-camera-photo": "^1.4.3",
