--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@nivo/api": "^0.59.3",
     "react": "^16.8.6",
+    "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-html5-camera-photo": "^1.4.3",
     "react-router-dom": "^5.0.1",
