--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@nivo/api": "^0.59.3",
+    "chart.js": "^2.8.0",
+    "date-fns": "^1.30.1",
     "react": "^16.8.6",
-    "react-calendar": "^2.19.0",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-html5-camera-photo": "^1.4.3",
     "react-router-dom": "^5.0.1",
