--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-SERVER_ENDPOINT="http://localhost:8000"
+SERVER_ENDPOINT="https://quiet-hamlet-94792.herokuapp.com"
+SERVER_ENDPOINT2="https://localhost:8000"
