--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-html5-camera-photo": "^1.4.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-spinners": "^0.6.1"
+    "react-spinners": "^0.6.1",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
